feat(MailServie): 회원 가입 시 이메일 인증 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,19 +22,21 @@ spring:
     port: 587
     username: gentleman959@gmail.com
     password: ypavxiczvwzcymeg
-  properties:
-    mail:
-      smtp:
-        auth: true
-        starttls:
-          enable: true
-          required: true
-        connectiontimeout: 5000
-        timeout: 5000
-        writetimeout: 5000
-  auth-code-expiration-millis: 2 * 60 * 1000 # 2분
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
 
-
+  auth:
+    code:
+      expiration:
+        millis: 2 * 60 * 1000
 
 #spring:
 #  datasource:
