feat(application.yml): storage 사용을 위한 application.yml 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,18 @@ spring:
       expiration:
         millis: 2 * 60 * 1000
 
+  cloud:
+    gcp:
+      storage:
+        credentials:
+          location: ./charismatic-age-414606-08978a3bdbe0.json
+    project-id: charismatic-age-414606
+    bucket: gnuting-storage-access
+
+app:
+  firebase-configuration-file: ./charismatic-age-414606-08978a3bdbe0.json
+  firebase-bucket: gnuting-storage-access
+
 #spring:
 #  datasource:
 #    driver-class-name: org.h2.Driver
