--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,16 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	springCloudVersion = '2021.0.1'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -41,6 +51,8 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	implementation 'org.modelmapper:modelmapper:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.0.1'
 }
 
 tasks.named('test') {
