refactor(UserController): 사용자 프로필 이미지 등록을 포함한 회원가입 API 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,11 +44,11 @@ spring:
         credentials:
           location: ./charismatic-age-414606-08978a3bdbe0.json
     project-id: charismatic-age-414606
-    bucket: gnuting-storage-access
+    bucket: gnuting-develop-bucket
 
 app:
   firebase-configuration-file: ./charismatic-age-414606-08978a3bdbe0.json
-  firebase-bucket: gnuting-storage-access
+  firebase-bucket: gnuting-develop-bucket
 
 #spring:
 #  datasource:
