setting: redis 사용을 위한 build.gradle, application.yml 설정

--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 	implementation("com.slack.api:bolt-jetty:1.18.0")
 
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
