refactor: slack token 환경변수 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -79,7 +79,7 @@ jwt:
   duration: 30
 
 slack:
-  token: xoxb-6786312890577-6786320324161-scWVozk3T4MJn0Y68alXqw18
+  token: ${SLACK_TOKEN}
   channel:
     monitor: '#gnuting'
 
