--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 }
 
 def querydslDir = "$buildDir/generated/querydsl"
